SynProdGITV1/force-app/main/default/objects/Create_Log__e/Create_Log__e.object-meta.xml
<CustomObject>
    <description>Event to create a log record.</description>
    <label>Create Log</label>
    <pluralLabel>Create Logs</pluralLabel>
</CustomObject>