SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>The severity of the Error</description>
    <inlineHelpText>The severity of the Error</inlineHelpText>
    <label>Log Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>