SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The Friendly Error Message</description>
    <inlineHelpText>The Friendly Error Message</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>