SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Source_Method__c.field-meta.xml
<CustomField>
    <fullName>Source_Method__c</fullName>
    <description>The originating method in the Class or node in the Flow  (e.g. UpdateDivision )</description>
    <inlineHelpText>The originating method in the Class or or node in the Flow  (e.g. UpdateDivision )</inlineHelpText>
    <label>Source Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>