SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <description>The name of the originating Class or Flow (e.g.  CustomerManagement)</description>
    <inlineHelpText>The name of the originating Class or Flow (e.g.  CustomerManagement)</inlineHelpText>
    <label>Source Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>