SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>The type of the Source that raised the error e.g Apex, Flow, Integration</description>
    <inlineHelpText>The type of the Source that raised the error e.g Apex, Flow, Integration</inlineHelpText>
    <label>Source Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>