SynProdGITV1/force-app/main/default/objects/Create_Log__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The Stack Trace log of the Exception</description>
    <inlineHelpText>The Stack Trace log of the Exception</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>